Form associated ElementInternals always reports customError when using setValidity https://bugs.webkit.org/show_bug.cgi?id=261432 <rdar://problem/115681066>

Reviewed by NOBODY (OOPS!).

Initial form-associated custom elements implementation attempted to avoid adding a String field by
relying on m_customValidationMessage for both regular [1] and custom [2] validation messages,
which turned out to be incompatible with the implementation of FormListedElement::customError().

Rather than deepening the hack / micro-optimization, this change adds a field and precisely implements
all the spec steps for setValidity() [3].

[1] https://html.spec.whatwg.org/multipage/custom-elements.html#face-validation-message
[2] https://html.spec.whatwg.org/multipage/form-control-infrastructure.html#custom-validity-error-message
[3] https://html.spec.whatwg.org/multipage/custom-elements.html#dom-elementinternals-setvalidity

* LayoutTests/imported/w3c/web-platform-tests/custom-elements/form-associated/ElementInternals-validation.html:
* Source/WebCore/html/FormAssociatedCustomElement.cpp:
(WebCore::FormAssociatedCustomElement::setValidity):
(WebCore::FormAssociatedCustomElement::validationMessage const):
* Source/WebCore/html/FormAssociatedCustomElement.h: